--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "yandex-tank-ammo-generator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
+  "homepage": "https://github.com/Blynskyniki/yandex-tank-ammo-generator#readme",
   "scripts": {
     "copyData": "cp package.json ./dist/package.json && cp ./README.md  ./dist/README.md ",
     "executable": "chmod +x ./dist/*.js",
@@ -14,7 +15,7 @@
   "bin": {
     "ammo-generator": "./index.js"
   },
-  "author": "",
+  "author": "blynskyniki@gmail.com",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^11.13.18",
