--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yandex-tank-ammo-generator",
-  "version": "1.0.1",
-  "description": "",
+  "version": "1.0.2",
+  "description": "Cartridge generation for Yandex tank",
   "main": "index.js",
   "homepage": "https://github.com/Blynskyniki/yandex-tank-ammo-generator#readme",
   "scripts": {
@@ -15,6 +15,15 @@
   "bin": {
     "ammo-generator": "./index.js"
   },
+  "keywords": [
+    "yandex",
+    "tank",
+    "yandex-tank",
+    "ammo",
+    "load testing",
+    "generate ammo"
+
+  ],
   "author": "blynskyniki@gmail.com",
   "license": "ISC",
   "devDependencies": {
