--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yandex-tank-ammo-generator",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "Cartridge generation for Yandex tank",
   "main": "index.js",
   "homepage": "https://github.com/Blynskyniki/yandex-tank-ammo-generator#readme",
@@ -10,7 +10,8 @@
     "build": "rm -rf ./dist && ./node_modules/.bin/tsc && cp package.json ./dist/package.json",
     "pub": "npm run build && npm run copyData &&  cd ./dist  && npm publish ",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "testInstall": "npm run build &&  sudo npm i -g ./dist/"
+    "testInstall": "npm run build &&  sudo npm i -g ./dist/",
+    "testRm": "sudo npm rm -g ./dist"
   },
   "bin": {
     "ammo-generator": "./index.js"
@@ -22,7 +23,6 @@
     "ammo",
     "load testing",
     "generate ammo"
-
   ],
   "author": "blynskyniki@gmail.com",
   "license": "ISC",
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "@hapi/joi": "^16.1.7",
-    "commander": "^4.0.1",
-    "yargs": "^14.2.0"
+    "@types/joi": "^14.3.4",
+    "commander": "^4.0.1"
   }
 }
