--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   "author": "blynskyniki@gmail.com",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^11.13.18",
-    "typescript": "^3.7.2",
-    "ts-node": "^7.0.0"
+    "@types/node": "^11.15.3",
+    "ts-node": "^7.0.0",
+    "typescript": "^3.7.2"
   },
   "dependencies": {
     "@hapi/joi": "^16.1.7",
