--- a/config.json
+++ b/config.json
@@ -1,7 +1,9 @@
 {
   "host": "i-dev.api.kari.com",
   "index": "kari_prod_275",
-  "auth": "",
+  "elastic": {
+    "uri": "http://188.227.17.166:39200"
+  },
   "limit": 15,
   "query": {
     "sort": {
