--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "yandex-tank-ammo-generator",
-  "version": "1.1.2",
+  "version": "1.1.4",
   "description": "Cartridge generation for Yandex tank",
   "main": "index.js",
   "homepage": "https://github.com/Blynskyniki/yandex-tank-ammo-generator#readme",
@@ -10,7 +10,7 @@
     "build": "rm -rf ./dist && ./node_modules/.bin/tsc && cp package.json ./dist/package.json",
     "pub": "npm run build && npm run copyData &&  cd ./dist  && npm publish ",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "testInstall": "npm run build &&  sudo npm i -g ./dist/",
+    "testInstall": "sudo npm uninstall yandex-tank-ammo-generator -g && sudo npm run build && cp ./node_modules ./dist/node_modules/ -r && sudo npm i -g ./dist/",
     "testRm": "sudo npm rm -g ./dist"
   },
   "bin": {
